2.0rc2 (2014-11-11)
-------------------

- Several unit tests and bugfixes contributed by Jeff Dairiki.

- webhelpers2.containers

  * [bug][py3k] Fix ``ordered_items`` when ``other_keys`` is set.

- webhelpers2.html.builder

  * Add "checked" and "selected" to list of boolean attributes.
  * [bug] Fix "unknown keyword args" reporting in ``HTML()``.

- webhelpers2.html.tags

  * Overhaul ``select``, ``Options``, ``Option``, and ``OptGroup``:

    + Users should test their calls to verify no incompatibilities have crept
      in , especially if using unusual argument types or edge cases.
    + The main helper is now ``Options``; ``select`` is now a wrapper around it.
    + The classes are now fully autonomous and render themselves as strings.
    + When options are rendered, the 'value' attribute is suppressed if it's
      identical to the label or None.
    + ``SelectedValues`` is a new support class used to convert the
      ``selected_values`` arguments.

  * [bug] Fix OptGroup.__repr__ to list its arguments in the correct order

- webhelpers2.html.tools

  * [bug] Properly escape the string passed to ``js_obfuscate``.

- webhelpers2.misc

  * [feature] Reinstate formatted exceptions with ``StudlyException``
    class. (Replaces 'DeclarativeException' which was deleted in 2.0b1.)
  * [bug] format_exception() did not work if called with ``exc=None`` (due
    to missing ``import sys``.)

- webhelpers2.number

  * [bug] The format size helpers now format negative numbers correctly.
    Previously they passed the number unchanged and appended the unit
    suffix, which changed the quantity.
  * [bug] median() was not computing the median correctly for
    even-length sequences

- webhelpers2.text

  * [feature] New helper ``wrap_long_lines()``.
  * [bug] excerpt() now works correctly when ``text`` is a ``literal``.
  * [bug] wrap_paragraphs() now works when ``width`` is a
    ``textwrap.TextWrapper`` instance.

2.0rc1 (2014-09-22)
-------------------
